--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -9,6 +9,7 @@
   width: 100vw;
   max-width: 100%;
   box-sizing: border-box;
+  height: 100%;
 
   --page-margin: #{"min(150px, 12vw)"};
 
